@@ -2,25 +2,27 @@ package com.example.api.dealership.config.data_generation;
 
 import com.example.api.dealership.adapter.dtos.car.CarDtoRequest;
 import com.example.api.dealership.adapter.dtos.client.ClientDtoRequest;
+import com.example.api.dealership.adapter.dtos.client.address.AddressDtoRequest;
+import com.example.api.dealership.adapter.dtos.client.address.AddressDtoResponse;
 import com.example.api.dealership.adapter.mapper.CarMapper;
 import com.example.api.dealership.adapter.mapper.ClientMapper;
-import com.example.api.dealership.adapter.mapper.SalesMapper;
-import com.example.api.dealership.adapter.service.car.impl.CarServiceImpl;
-import com.example.api.dealership.adapter.service.client.impl.ClientServiceImpl;
+import com.example.api.dealership.adapter.output.repository.port.CarRepositoryPort;
+import com.example.api.dealership.adapter.output.repository.port.ClientRepositoryPort;
 import com.example.api.dealership.adapter.service.sales.SalesService;
 import com.example.api.dealership.adapter.service.user.UserService;
 import com.example.api.dealership.core.domain.CarModel;
 import com.example.api.dealership.core.domain.ClientModel;
 import com.example.api.dealership.core.domain.UserModel;
-import com.google.gson.Gson;
-import com.google.gson.reflect.TypeToken;
+import com.example.api.dealership.core.exceptions.UsernameAlreadyUsedException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import net.datafaker.Faker;
+import org.springframework.beans.BeanUtils;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -28,7 +30,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Random;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Configuration
@@ -36,19 +37,16 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class DataGeneration {
 
-    private final ClientServiceImpl clientRepositoryAdapter;
-    private final ClientMapper clientMapper;
-    private final CarServiceImpl carRepositoryAdapter;
+    private final ClientRepositoryPort clientRepositoryPort;
+    private final CarRepositoryPort carRepositoryPort;
     private final CarMapper carMapper;
     private final SalesService salesService;
-    private final SalesMapper salesMapper;
     private final UserService userService;
-    private final BCryptPasswordEncoder passwordEncoder;
 
     @Bean
-    public void saveMockingData(){
-        var clients = saveClientModel(generateClientData());
-        var cars = saveCarModel(generateCarData());
+    public void saveMockingData() throws UsernameAlreadyUsedException {
+        final var clients = saveClientModel(generateClientData());
+        final var cars = saveCarModel(generateCarData());
         saveSales(clients,cars);
         saveUser(generateUserData());
     }
@@ -57,16 +55,17 @@ public class DataGeneration {
         for(int i=0;i < 100;i++){
             Random random = ThreadLocalRandom.current();
 
-            var randomIntClient = (random.nextInt(clients.size() - 1 + 1));
-            var randomIntCar = (random.nextInt(cars.size() - 1 + 1));
+            final var randomIntClient = (random.nextInt(clients.size() - 1 + 1));
+            final var randomIntCar = (random.nextInt(cars.size() - 1 + 1));
 
-            var client = clients.get(randomIntClient);
-            var car = cars.get(randomIntCar);
+            final var client = clients.get(randomIntClient);
+            final var car = cars.get(randomIntCar);
 
             cars.remove(randomIntCar);
+            clients.remove(randomIntClient);
 
             try {
-                salesService.saveSale(salesMapper.toSalesModel(car, client));
+                salesService.saveSale(client.getCpf(),car.getVin());
             }catch (Exception ex) {
                 log.error("Deu ruim no save do sale",ex);
             }
@@ -74,107 +73,118 @@ public class DataGeneration {
     }
 
     private List<CarModel> saveCarModel(List<CarDtoRequest> cars){
-        var carsModel = cars.stream().map(carMapper::toCarModel).collect(Collectors.toList());
-
-        var savedCarsModel = new ArrayList<CarModel>();
-
+        final var carsModel = cars.stream()
+                .map(carMapper::toCarModel)
+                .toList();
         try {
-            carsModel.forEach(car -> savedCarsModel.add(carRepositoryAdapter.save(car)));
-
+            return carRepositoryPort.saveAll(carsModel);
         }catch (Exception ex){
             log.error("Deu ruim no save do carro",ex);
+            return List.of();
         }
-        return savedCarsModel;
     }
 
     private List<ClientModel> saveClientModel(List<ClientDtoRequest> clients){
-        var clientsModel = clients.stream()
-                .map(clientMapper::toClientModel)
-                .collect(Collectors.toList());
+        final var clientsModel = clients.stream()
+                .map(ClientMapper::toClientModel)
+                .toList();
 
-        clientsModel.forEach(client -> client.getAddress().setIsAddressSearched(true));
+        final var clientAddressDtoResponse = generateClientAddressData();
 
-        var clientsModelCpf = new ArrayList<ClientModel>();
+        Random random = ThreadLocalRandom.current();
+
+        clientsModel.forEach(client ->
+                BeanUtils.copyProperties(clientAddressDtoResponse.get(
+                                (random.nextInt(clientsModel.size() - 1 + 1) + 1)),
+                        client.getAddress()));
 
         try {
-            clientsModel.forEach(client -> clientsModelCpf.add(clientRepositoryAdapter.saveClient(client)));
-            return clientsModelCpf;
+            return clientRepositoryPort.saveAll(clientsModel);
+
         }catch (Exception ex){
             log.error("Deu ruim no save do client",ex);
+            return List.of();
         }
-        return clientsModelCpf;
     }
 
     private List<ClientDtoRequest> generateClientData() {
 
-            Faker faker = new Faker(new Locale("pt-BR"));
+            final var  faker = new Faker(new Locale("pt-BR"));
 
-            var clientDtoRequests = generateClientAddressData(faker);
+            final var clientsCPF = faker.collection(() -> faker.cpf().valid(false)).len(100).generate();
 
-            List<String> clientsCPF = faker.collection(() -> faker.cpf().valid(false)).len(100).generate();
-
-            var clientsRequests = new ArrayList<ClientDtoRequest>();
+            final var clientsRequests = new ArrayList<ClientDtoRequest>();
 
             for(int i=0; i < 100; i++){
-                Random random = ThreadLocalRandom.current();
+                final var clientDtoRequest = ClientDtoRequest.builder()
+                                .name(faker.name().name())
+                                .cpf(clientsCPF.get(i))
+                                .address(AddressDtoRequest.builder()
+                                        .postCode("111111111")
+                                        .streetNumber("361")
+                                        .build())
+                                .build();
 
-                var clientDtoRequest = clientDtoRequests.get((random.nextInt(clientDtoRequests.size() - 1 + 1)+1));
-
-                clientDtoRequest.setName(faker.name().name());
-                clientDtoRequest.setCpf(clientsCPF.get(i));
                 clientsRequests.add(clientDtoRequest);
             }
 
             return clientsRequests;
     }
 
-    private List<ClientDtoRequest> generateClientAddressData(Faker faker){
+
+    private static List<AddressDtoResponse> generateClientAddressData(){
         try {
+            final var jsonText = AbstractReader.readJson("./static/MOCK_ADDRESS_DATA.json");
+            final var type = new TypeReference<List<AddressDtoResponse>>() {};
 
-            String jsonText = AbstractReader.readJson("./static/MOCK_ADDRESS_DATA.json");
-
-            var type = new TypeToken<List<ClientDtoRequest>>() {}.getType();
-
-            List<ClientDtoRequest> clientDtoRequests = new Gson().fromJson(jsonText, type);
-
-            clientDtoRequests.forEach(address -> address.setStreetNumber(faker.address().streetAddressNumber()));
-
-            return clientDtoRequests;
-
-        }catch (IOException ex){
+            return new ObjectMapper().readValue(jsonText, type);
+        } catch (IOException ex) {
             log.error("Erro na leitura do arquivo",ex);
             return List.of();
         }
     }
 
-    private List<CarDtoRequest> generateCarData(){
+
+    private List<CarDtoRequest> generateCarData() {
         try {
-            String jsonText = AbstractReader.readJson("./static/MOCK_VEIC_DATA.json");
-            var type = new TypeToken<List<CarDtoRequest>>(){}.getType();
-            List<CarDtoRequest> cars = new Gson().fromJson(jsonText,type);
-            // Perguntar em relação ao stream, pq n tá funcionando
-            cars.forEach(car -> car.setCarValue(generateRandomDoubleValueFromRange(0.00,400000.00)));
-            return cars;
-        }catch (IOException ex){
-            log.error("Erro na leitura do arquivo",ex);
+            final var jsonText = AbstractReader.readJson("./static/MOCK_VEIC_DATA.json");
+            final var type = new TypeReference<List<CarDtoRequest>>() {};
+
+            final List<CarDtoRequest> carsWithoutValue = new ObjectMapper().readValue(jsonText, type);
+
+            return carsWithoutValue.stream()
+                    .map(this::buildCarDtoRequestWithValue)
+                    .toList();
+        } catch (IOException ex) {
+            log.error("Erro na leitura do arquivo", ex);
             return List.of();
         }
+    }
+
+    private CarDtoRequest buildCarDtoRequestWithValue(CarDtoRequest car){
+        return CarDtoRequest.builder()
+                .model(car.model())
+                .modelYear(car.modelYear())
+                .manufacturer(car.manufacturer())
+                .color(car.color())
+                .vin(car.vin())
+                .value(generateRandomDoubleValueFromRange(0.00,400000.00))
+                .build();
     }
 
     private Double generateRandomDoubleValueFromRange(Double min, Double max) {
         Random random = new Random();
-        Double randomDouble = min + (max - min) * random.nextDouble();
-        return randomDouble;
+        return min + (max - min) * random.nextDouble();
     }
 
-    private void saveUser(UserModel user) {
+    private void saveUser(UserModel user) throws UsernameAlreadyUsedException {
         userService.saveUser(user);
     }
 
     private UserModel generateUserData() {
         return UserModel.builder()
                 .username("admin")
-                .password(passwordEncoder.encode("123456"))
+                .password("123456")
                 .isAdmin(true)
                 .build();
     }
